--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <style>
     :root {
       --clr-bg: #f6f8fa;
-      --clr-header: #24292f;
+      --clr-header: #181D20;
       --clr-accent: #2da44e;
       --clr-link: #0969da;
       --clr-text: #222;
       --clr-card: #fff;
       --shadow: 0 2px 8px rgba(36,41,47,0.06);
-      --radius: 10px;
-      --max-width: 960px;
+      --radius: 12px;
+      --max-width: 1050px;
     }
     html, body { margin: 0; padding: 0; }
     body {
@@ -27,7 +27,7 @@
     header {
       background: var(--clr-header);
       color: #fff;
-      padding: 0.75rem 0;
+      padding: 0.9rem 0;
       box-shadow: var(--shadow);
     }
     .header-container {
@@ -39,15 +39,16 @@
       padding: 0 2rem;
     }
     .logo img {
-      height: 42px;
+      height: 48px;
       vertical-align: middle;
+      display: block;
     }
     nav a {
       color: #fff;
       text-decoration: none;
       font-weight: 500;
       margin-left: 2rem;
-      font-size: 1.08rem;
+      font-size: 1.09rem;
       transition: color .2s;
     }
     nav a:hover {
@@ -77,7 +78,7 @@
       min-width: 280px;
     }
     .hero-text h1 {
-      font-size: 2.3rem;
+      font-size: 2.35rem;
       font-weight: 700;
       margin-bottom: 1rem;
       color: var(--clr-header);
@@ -111,7 +112,7 @@
     }
     .services {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 2rem;
       margin-top: 0.5rem;
     }
@@ -120,26 +121,39 @@
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       text-align: left;
-      padding: 2rem 1.3rem 1.7rem 1.3rem;
+      padding: 2.1rem 1.5rem 1.7rem 1.5rem;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      min-height: 270px;
+      align-items: center;
+      min-height: 310px;
       position: relative;
+      transition: box-shadow 0.15s, transform 0.12s;
+      border: 1.5px solid #f1f2f4;
+    }
+    .card:hover {
+      box-shadow: 0 6px 24px rgba(45,164,78,0.12), var(--shadow);
+      transform: translateY(-5px) scale(1.03);
+      border-color: var(--clr-accent);
     }
     .card img {
-      width: 54px;
-      margin-bottom: 1.1rem;
+      width: 68px;
+      height: 68px;
+      margin-bottom: 1.2rem;
+      object-fit: contain;
+      display: block;
+      filter: drop-shadow(0 2px 10px #e3f7ed);
     }
     .card h3 {
-      font-size: 1.18rem;
+      font-size: 1.28rem;
       font-weight: 600;
-      margin-bottom: 0.5rem;
-      color: var(--clr-accent);
+      margin-bottom: 0.8rem;
+      color: var(--clr-header);
+      text-align: center;
     }
     .card p {
-      color: #4b5765;
-      font-size: 1.01rem;
+      color: #48505e;
+      font-size: 1.05rem;
+      text-align: center;
     }
     footer {
       margin-top: 3rem;
@@ -150,19 +164,12 @@
       color: #768390;
       border-top: 1px solid #e2e8f0;
     }
-    @media (max-width: 680px) {
-      .header-container, main {
-        padding: 0 1rem;
-      }
-      .hero {
-        flex-direction: column;
-        padding: 1.3rem 0.7rem;
-      }
-      .hero-img img {
-        margin-left: 0;
-        margin-top: 2rem;
-        width: 80vw;
-      }
+    @media (max-width: 800px) {
+      .header-container, main { padding: 0 1rem; }
+      .hero { flex-direction: column; padding: 1.3rem 0.7rem; }
+      .hero-img img { margin-left: 0; margin-top: 2rem; width: 80vw; }
+      .services { grid-template-columns: 1fr; }
+      .card { min-height: 200px; }
     }
   </style>
 </head>
@@ -173,8 +180,8 @@
         <img src="assets/logo.png" alt="REVX Systems logo">
       </div>
       <nav>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
+        <a href="#Services">Services</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -189,14 +196,14 @@
         <img src="assets/hero-image.png" alt="Illustration technique ECU et batterie">
       </div>
     </section>
-
     <section id="services">
-      <h2 style="margin-bottom:1.5rem; color:#222; font-weight:600;">Nos Services</h2>
+      <h2 style="margin-bottom:1.5rem; color:#222; font-weight:600; text-align:left;">Nos Services</h2>
       <div class="services">
         <div class="card">
           <img src="assets/icon-ecu.png" alt="Reprogrammation ECU">
           <h3>Interventions ECU Thermique</h3>
-          <p>Reprogrammation Stage 1, débridage vitesse courte, conversion E85, et fichiers sur mesure pour tous modèles. <br><a href="#contact" style="color:var(--clr-link);text-decoration:underline;">Demander un fichier</a></p>
+          <p>Reprogrammation Stage 1, débridage vitesse courte, conversion E85, et fichiers sur mesure pour tous modèles.<br>
+          <a href="#contact" style="color:var(--clr-link);text-decoration:underline;">Demander un fichier</a></p>
         </div>
         <div class="card">
           <img src="assets/icon-battery.png" alt="Diagnostic Batterie">
@@ -211,7 +218,6 @@
       </div>
     </section>
   </main>
-
   <footer>
     &copy; <span id="year"></span> REVX Systems – Micro-entreprise non soumise à la TVA (art. 293B CGI) – contact@revx-systems.fr
   </footer>
