--- a/index.html
+++ b/index.html
@@ -184,16 +184,18 @@
 </head>
 <body>
   <header>
-    <div class="header-container">
-      <div class="logo">
+  <div class="header-container">
+    <div class="logo">
+      <a href="index.html">
         <img src="assets/logo.png" alt="REVX Systems logo">
-      </div>
-      <nav>
-        <a href="#Services">Services</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+      </a>
     </div>
-  </header>
+    <nav>
+      <a href="index.html">Services</a>
+      <a href="contact.html" style="color: var(--clr-accent); font-weight:600;">Contact</a>
+    </nav>
+  </div>
+</header>
   <main>
     <section class="hero">
       <div class="hero-text">
@@ -221,7 +223,7 @@
         </div>
         <div class="card">
           <img src="assets/icon-custom.png" alt="Étude personnalisée">
-          <h3>Étude Sur Mesure</h3>
+          <h3>Étude personnalisée</h3>
           <p>Autres interventions ou diagnostics spécifiques : étude personnalisée selon vos besoins techniques.</p>
         </div>
       </div>
