--- a/contact.html
+++ b/contact.html
@@ -178,16 +178,16 @@
         <p style="color:#577;">Réponse rapide</p>
       </div>
       <form class="contact-form" action="https://formsubmit.co/contact@revx-systems.fr" method="POST">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="merci.html">
-  <label for="nom">Votre nom</label>
-  <input type="text" id="nom" name="Nom" required>
-  <label for="email">Votre email</label>
-  <input type="email" id="email" name="Email" required>
-  <label for="message">Votre message</label>
-  <textarea id="message" name="Message" rows="5" required></textarea>
-  <button type="submit" class="btn">Envoyer</button>
-</form>
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="/revx-systems.fr/merci.html">
+        <label for="nom">Votre nom</label>
+        <input type="text" id="nom" name="Nom" required>
+        <label for="email">Votre email</label>
+        <input type="email" id="email" name="Email" required>
+        <label for="message">Votre message</label>
+        <textarea id="message" name="Message" rows="5" required></textarea>
+        <button type="submit" class="btn">Envoyer</button>
+      </form>
       <div style="margin-top:1.8rem; color:#888; font-size:.96rem; text-align:center;">
         Ou contactez-moi directement par e-mail ou WhatsApp pour un échange rapide.<br>
         REVX Systems – Conseils & interventions sur mesure.
