--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --clr-bg: #f6f8fa;
-      --clr-header: #181D20;
-      --clr-accent: #2da44e;
-      --clr-link: #0969da;
-      --clr-text: #222;
-      --clr-card: #fff;
-      --shadow: 0 2px 8px rgba(36,41,47,0.06);
+      --clr-bg: #0f1216;
+      --clr-header: #0b0e12;
+      --clr-card: #1f2832;
+      --clr-text: #e2e8f0;
+      --clr-text-light: #a8b6c1;
+      --clr-accent: #919c41;
+      --clr-accent2: #f08c00;
+      --clr-link: var(--clr-accent);
+      --shadow-light: 0 2px 8px rgba(0, 0, 0, 0.6);
+      --shadow-hover: 0 6px 24px rgba(45, 164, 78, 0.4);
       --radius: 12px;
-      --max-width: 480px;
+      --max-width: 1050px;
+      --clr-hero-title: #bcbcbc;
+      --clr-section-title: #bcbcbc;
     }
     html, body { margin: 0; padding: 0; }
     body {
@@ -25,157 +30,200 @@
       min-height: 100vh;
     }
     header {
-    background: var(--clr-header);
-    color: #fff;
-    padding: 0.9rem 0;
-    box-shadow: var(--shadow);
-  }
-  .header-container {
-    max-width: var(--max-width);
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 2rem;
-    min-height: 64px; /* Ajoute une hauteur minimale pour la cohérence */
-  }
-  .logo {
-    display: flex;
-    align-items: center;
-  }
-  .logo img {
-    height: 48px;
-    vertical-align: middle;
-    display: block;
-  }
-  nav {
-    display: flex;
-    align-items: center;
-  }
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 2rem;
-    font-size: 1.09rem;
-    transition: color .2s;
-  }
-  nav a:hover {
-    color: var(--clr-accent);
+      background: var(--clr-header);
+      color: #fff;
+      padding: 0.9rem 0;
+      box-shadow: var(--shadow-light);
+    }
+    .header-container {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 2rem;
+      min-height: 64px;
+    }
+    .logo img {
+      height: 48px;
+      display: block;
+    }
+    nav {
+      display: flex;
+      align-items: center;
+    }
+    nav a {
+      color: var(--clr-text);
+      text-decoration: none;
+      font-weight: 500;
+      margin-left: 2rem;
+      font-size: 1.09rem;
+      transition: color .2s;
+    }
+    nav a:first-child {
+      margin-left: 0;
+    }
+    nav a:hover,
+    nav a[style*="color: var(--clr-accent)"] {
+      color: var(--clr-accent);
     }
     main {
+      max-width: var(--max-width);
+      margin: 2rem auto;
+      padding: 0 2rem;
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 80vh;
-      padding: 3.5rem 0 2rem 0;
+      flex-direction: column;
+      gap: 2.5rem;
+      align-items: stretch;
     }
     .contact-card {
       background: var(--clr-card);
       border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      max-width: var(--max-width);
+      box-shadow: var(--shadow-light);
+      max-width: 600px;
       width: 100%;
-      padding: 2.5rem 2rem 2rem 2rem;
+      margin: 0 auto;
+      padding: 2.5rem 2.2rem 2rem 2.2rem;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: stretch;
     }
     .contact-card h2 {
       font-size: 2rem;
       font-weight: 700;
-      color: var(--clr-header);
-      margin-bottom: 1.2rem;
+      color: var(--clr-hero-title);
+      margin-bottom: 1.5rem;
       letter-spacing: -1px;
+      text-align: center;
     }
     .contact-info {
       width: 100%;
-      margin-bottom: 2rem;
-    }
-    .contact-info p {
-      font-size: 1.11rem;
-      color: #33404f;
-      margin: 0.8rem 0;
+      margin-bottom: 2.2rem;
       display: flex;
-      align-items: center;
+      flex-direction: column;
       gap: 0.7rem;
     }
+    .contact-info p {
+      font-size: 1.08rem;
+      color: var(--clr-text-light);
+      margin: 0;
+      display: flex;
+      align-items: center;
+      gap: 0.6rem;
+    }
+    .contact-info .icon {
+      font-size: 1.25em;
+      color: var(--clr-accent2);
+      margin-right: 0.3em;
+    }
     .contact-info a {
-      color: var(--clr-link);
+      color: var(--clr-accent2);
       text-decoration: underline;
       word-break: break-all;
+      transition: color .18s;
+    }
+    .contact-info a:hover {
+      color: var(--clr-accent);
     }
     .contact-form {
       width: 100%;
       margin-top: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.7rem;
     }
     .contact-form label {
       display: block;
-      margin-bottom: 0.3rem;
-      color: #555;
-      font-weight: 500;
+      margin-bottom: 0.2rem;
+      color: var(--clr-section-title);
+      font-weight: 600;
+      font-size: 1.03rem;
     }
     .contact-form input, .contact-form textarea {
       width: 100%;
       padding: 0.7rem;
-      margin-bottom: 1.1rem;
-      border: 1.2px solid #e2e4e8;
+      border: 1.2px solid #232f3e;
       border-radius: 7px;
       font-size: 1.03rem;
-      background: #f9fbfc;
+      background: #202b3a;
+      color: var(--clr-text);
       font-family: inherit;
-      transition: border 0.2s;
+      margin-bottom: 0.2rem;
+      transition: border 0.2s, background 0.2s;
     }
     .contact-form input:focus, .contact-form textarea:focus {
-      border-color: var(--clr-accent);
+      border-color: var(--clr-accent2);
       outline: none;
+      background: #232f1e;
     }
     .btn {
-      background: var(--clr-accent);
+      background: var(--clr-accent2);
       color: #fff;
-      padding: 0.75rem 2.1rem;
+      padding: 0.85rem 2.1rem;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       font-weight: 600;
       font-size: 1.1rem;
       cursor: pointer;
       text-decoration: none;
-      box-shadow: 0 2px 12px #e3f7ed77;
-      transition: background .18s;
+      box-shadow: 0 2px 12px #ff7a2f33;
+      transition: background .18s, transform .1s;
+      margin: 1.1rem auto 0 auto;
+      display: block;
+      width: 70%;
     }
     .btn:hover {
-      background: #238636;
+      background: var(--clr-accent);
+      color: #232a36;
+      transform: translateY(-2px) scale(1.02);
     }
-    @media (max-width: 600px) {
-      .header-container { padding: 0 1rem; }
-      .contact-card { padding: 1.1rem 0.5rem 1rem 0.5rem; }
+    .contact-footer {
+      margin-top: 2.2rem;
+      color: var(--clr-text-light);
+      font-size: .98rem;
+      text-align: center;
+      opacity: 0.85;
+    }
+    footer {
+      background: var(--clr-header);
+      color: var(--clr-text-light);
+      text-align: center;
+      padding: 1.2rem 0 1.1rem 0;
+      font-size: 1rem;
+      margin-top: 3rem;
+      box-shadow: var(--shadow-light);
+      letter-spacing: 0.01em;
+    }
+    #year {
+      font-variant-numeric: tabular-nums;
+    }
+    @media (max-width: 800px) {
+      .header-container, main { padding: 0 1rem; }
+      .contact-card { padding: 1.1rem 0.5rem 1rem 0.5rem; max-width: 98vw;}
       main { padding: 1.3rem 0 1.5rem 0; }
     }
   </style>
 </head>
 <body>
   <header>
-  <div class="header-container">
-    <div class="logo">
-      <a href="index.html">
-        <img src="assets/logo.png" alt="REVX Systems logo">
-      </a>
+    <div class="header-container">
+      <div class="logo">
+        <a href="index.html">
+          <img src="assets/logo.png" alt="REVX Systems logo">
+        </a>
+      </div>
+      <nav>
+        <a href="index.html">Services</a>
+        <a href="contact.html" style="color: var(--clr-accent); font-weight:600;">Contact</a>
+      </nav>
     </div>
-    <nav>
-      <a href="index.html">Services</a>
-      <a href="contact.html" style="color: var(--clr-accent); font-weight:600;">Contact</a>
-    </nav>
-  </div>
-</header>
+  </header>
   <main>
     <section class="contact-card">
       <h2>Contact</h2>
       <div class="contact-info">
-        <p>📧 <b>E-mail :</b> <a href="mailto:contact@revx-systems.fr">contact@revx-systems.fr</a></p>
-        <p>💬 <b>WhatsApp&nbsp;:</b>
-          <a href="https://wa.me/33954207754" target="_blank" rel="noopener">+33&nbsp;9&nbsp;54&nbsp;20&nbsp;77&nbsp;54</a>
-        </p>
-        <p style="color:#577;">Réponse rapide</p>
+        <p><span class="icon">📧</span><b>E-mail :</b> <a href="mailto:contact@revx-systems.fr">contact@revx-systems.fr</a></p>
+        <p><span class="icon">💬</span><b>WhatsApp :</b> <a href="https://wa.me/33954207754" target="_blank" rel="noopener">+33 9 54 20 77 54</a></p>
       </div>
       <form class="contact-form" action="https://formsubmit.co/contact@revx-systems.fr" method="POST">
         <input type="hidden" name="_captcha" value="false">
@@ -188,11 +236,15 @@
         <textarea id="message" name="Message" rows="5" required></textarea>
         <button type="submit" class="btn">Envoyer</button>
       </form>
-      <div style="margin-top:1.8rem; color:#888; font-size:.96rem; text-align:center;">
+      <div class="contact-footer">
         Ou contactez-moi directement par e-mail ou WhatsApp pour un échange rapide.<br>
         REVX Systems – Conseils & interventions sur mesure.
       </div>
     </section>
   </main>
+  <footer>
+    &copy; <span id="year"></span> REVX Systems – Micro-entreprise non soumise à la TVA (art. 293B CGI) – contact@revx-systems.fr
+  </footer>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
