--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <form action="https://formsubmit.co/contact@revx-systems.fr" method="POST" aria-describedby="wl-note">
         <!-- Configuration FormSubmit -->
         <input type="hidden" name="_subject" value="Nouvelle inscription liste pilote REVX Systems">
-        <input type="hidden" name="_next" value="https://revx-systems.fr/merci.html">
+        <input type="hidden" name="_next" value="https://www.revx-systems.fr/merci.html">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
         
